--- a/CFn/elblog-to-firehose/cfn-cloudfront-accesslog-firehose.yaml
+++ b/CFn/elblog-to-firehose/cfn-cloudfront-accesslog-firehose.yaml
@@ -1,14 +1,39 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: S3(alblog) Firehose S3(json) 20180513
+Description: Convert CloudFront access log to JSON via Firehose (20180514)
+
 Parameters:
-  SourceS3Bucket:
-    Description: S3 Bucket Name (ALB accesslog)
+  S3Expiredate:
+    Description: Number of days to keep S3 file (S3 TTL)
     Type: String
-    Default: c1-s3bucket-#####
+    Default: 10
+  CWlogsExpiredate:
+    Description: Number of days to keep Cloudwatch logs (S3 TTL)
+    Type: String
+    Default: 3
 
 Resources:
+  Step1S3Bucket:
+    Type: AWS::S3::Bucket
+    DeletionPolicy: Delete
+    Properties:
+      LifecycleConfiguration:
+        Rules:
+          - Id: AutoDelete
+            Status: Enabled
+            ExpirationInDays: !Ref 'S3Expiredate'
+      NotificationConfiguration:
+        TopicConfigurations:
+          - Event: s3:ObjectCreated:*
+            Filter:
+              S3Key:
+                Rules:
+                  - Name: suffix
+                    Value: gz
+            Topic: !Ref 'Step2SnsTopic'
+      VersioningConfiguration:
+        Status: Enabled
 
-  Step1SnsTopicPolicy:
+  Step2SnsTopicPolicy:
     Type: AWS::SNS::TopicPolicy
     Properties:
       PolicyDocument:
@@ -22,33 +47,33 @@ Resources:
                 - s3.amazonaws.com
             Action:
               - sns:Publish
-            Resource: !Ref 'Step1SnsTopic'
+            Resource: !Ref 'Step2SnsTopic'
       Topics:
-        - !Ref 'Step1SnsTopic'
+        - !Ref 'Step2SnsTopic'
 
-  Step1SnsTopic:
+  Step2SnsTopic:
     Type: AWS::SNS::Topic
     Properties:
-      DisplayName: s3-trigger-alb-output
+      DisplayName: !Sub 's3-cloudfront-accesslogs-ObjectCreated'
       Subscription:
-        - Endpoint: !GetAtt 'Step2LambdaFunction.Arn'
+        - Endpoint: !GetAtt 'Step3LambdaFunction.Arn'
           Protocol: lambda
 
-  Step2LambdaLambdaPermission:
+  Step3LambdaLambdaPermission:
     Type: AWS::Lambda::Permission
     Properties:
-      FunctionName: !Ref 'Step2LambdaFunction'
+      FunctionName: !Ref 'Step3LambdaFunction'
       Action: lambda:InvokeFunction
       Principal: sns.amazonaws.com
-      SourceArn: !Ref 'Step1SnsTopic'
+      SourceArn: !Ref 'Step2SnsTopic'
 
-  Step2LogGroupLambda:
+  Step3LogGroupLambda:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: !Sub '/aws/lambda/${Step2LambdaFunction}'
-      RetentionInDays: 14
+      LogGroupName: !Sub '/aws/lambda/${Step3LambdaFunction}'
+      RetentionInDays: !Ref 'CWlogsExpiredate'
 
-  Step2LambdaRole:
+  Step3LambdaRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -79,23 +104,23 @@ Resources:
               - Effect: Allow
                 Action:
                   - s3:GetObject
-                Resource: !Sub 'arn:aws:s3:::${SourceS3Bucket}/*'
+                Resource: !Sub 'arn:aws:s3:::${AWS::StackName}-*'
               - Effect: Allow
                 Action:
                   - firehose:PutRecordBatch
-                Resource: !GetAtt 'Step3deliverystream.Arn'
+                Resource: !GetAtt 'Step4deliverystream.Arn'
               - Effect: Allow
                 Action:
                   - sqs:SendMessage
-                Resource: !GetAtt [Step2SqsDeadLetterQueue, Arn]
+                Resource: !GetAtt [Step3SqsDeadLetterQueue, Arn]
 
-  Step2LambdaFunction:
+  Step3LambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
       Handler: index.lambda_handler
-      Role: !GetAtt 'Step2LambdaRole.Arn'
+      Role: !GetAtt 'Step3LambdaRole.Arn'
       DeadLetterConfig: 
-        TargetArn: !GetAtt [Step2SqsDeadLetterQueue, Arn]
+        TargetArn: !GetAtt [Step3SqsDeadLetterQueue, Arn]
       Code:
         ZipFile: !Sub |
           import boto3
@@ -109,13 +134,13 @@ Resources:
 
           s3 = boto3.client('s3')
           firehose = boto3.client('firehose')
-  
+
           def lambda_handler(event, context):
             a = parse_s3_event(event)
             bucket_name = a['bucket_name']
             key = a['key']
 
-            # Process ALB log (gzip)
+            # Process CloudFront log (.gz)
             if (re.match('.*.gz$', key)):
               response =s3.get_object(Bucket=bucket_name, Key=key)
               body = gzip.decompress(response['Body'].read()).decode('utf-8').splitlines()
@@ -146,76 +171,50 @@ Resources:
 
           def parse_log(line):
             z = {}
-            a = line.split('"')
-            b = a[0].split(' ')
+            a = line.split('\t')
 
-            # ALB Log
-            if len(b) == 13:
-              if b[2].split('/')[0] == 'app':
-                if (re.match('[0-9]...-[0-9].-[0-9].T[0-9].:[0-9].:[0-9].\.[[0-9]*Z' , b[1])):
-                  z = parse_alb_log(a)
+            # cloudfront Log
+            if len(a) => 26:
+              if (re.match('[0-9]...-[0-9].-[0-9].' , a[0])):
+                if (re.match('[0-9].:[0-9].:[0-9].' , a[1])):
+                  z = parse_cloudfront_log(a)
 
-            if len(z) > 10:
+            #Column check (number)
+            if len(z) > 25:
               #print(z)
               return json.dumps(z) + "\n"
 
-          def parse_alb_log(a):
+          def parse_cloudfront_log(b):
             z = {}
-            b = a[0].split(' ')
+            z["date"] = b[0]
+            z["time"] = b[1]
+            z["x_edge_location"] = b[2]
+            z["sc_bytes"] = float(b[3])
+            z["c_ip"] = b[4]
+            z["cs_method"] = b[5]
+            z["cs_host"] = b[6]
+            z["cs_uri_stem"] = b[7]
+            z["sc_status"] = b[8]
+            z["cs_referer"] = b[9]
+            z["cs_user_agent"] = b[10]
+            z["cs_uri_query"] = b[11]
+            z["cs_cookie"] = b[12]
+            z["x_edge_result_type"] = b[13]
+            z["x_edge_request_id"] = b[14]
+            z["x_host_header"] = b[15]
+            z["cs_protocol"] = b[16]
+            z["cs_bytes"] = float(b[17])
+            z["time_taken"] = float(b[18])
+            z["x_forwarded_for"] = b[19]
+            z["ssl_protocol"] = b[20]
+            z["ssl_cipher"] = b[21]
+            z["x_edge_response_result_type"] = b[22]
+            z["cs_protocol_version"] = b[23]
+            z["fle_status"] = b[3]
+            z["fle_encrypted_fields"] = b[3]
 
-            # ALB Log
-            z["type"] = b[0]
-            z["timestamp"] = b[1]
-            z["elb"] = b[2]
-            if len(b[3].split(':')) > 1:
-              z["client_port"] = b[3].split(':')[1]
-            if len(b[4].split(':')) > 1:
-              z["target_port"] = b[4].split(':')[1]
-            z["request_processing_time"] = float(b[5])
-            z["target_processing_time"] = float(b[6])
-            z["response_processing_time"] = float(b[7])
-            z["elb_status_code"] = b[8]
-            z["target_status_code"] = b[9]
-            z["received_bytes"] = float(b[10])
-            z["sent_bytes"] = float(b[11])
-            z["request"] = a[1]
-            z["user_agent"] = a[3]
+            z["timestamp"] = z["date"] + 'T' + z["time"] + '.000000Z'
 
-            c = a[4].split(' ')
-            if len(c) == 5:
-              z["ssl_cipher"] = c[1]
-              z["ssl_protocol"] = c[2]
-              z["target_group_arn"] = c[3]
-            z["trace_id"] = a[5]
-            z["domain_name"] = a[7]
-            z["chosen_cert_arn"] = a[9]
-            z["matched_rule_priority"] = a[10]
-
-            if len(a) > 10:
-              d = a[10].split(' ')
-              if len(d) > 1:
-                z["matched_rule_priority"] = d[1]
-            z["client"] = b[3].split(':')[0]
-            z["target"] = b[4].split(':')[0]
-            if len(z["request"].split(' ')) > 2:
-              z["request_method"] = z["request"].split(' ')[0]
-              z["request_uri"] = z["request"].split(' ')[1]
-              z["request_http_version"] = z["request"].split(' ')[2]
-              if z["request_method"] != '-' :
-                e = urllib.parse.urlparse(z["request_uri"])
-                z["request_uri_scheme"] = e.scheme
-                z["request_uri_user"] = e.username
-                z["request_uri_host"] = e.hostname
-                z["request_uri_port"] = e.port
-                z["request_uri_path"] = e.path
-                z["request_uri_query"] = e.query
-                z["request_uri_fragment"] = e.fragment
-              else:
-                z["request_uri_scheme"] = z["request_uri"].split(':')[0]
-                z["request_uri_user"] = ''
-                z["request_uri_host"] = z["request_uri"].split('/')[2].split(':')[0]
-                z["request_uri_port"] = z["request_uri"].split(':')[2].split('-')[0]
-                z["request_uri_path"] = ''
             return z
 
           def PutRecordBatchFirehose(data):
@@ -230,36 +229,34 @@ Resources:
       Runtime: python3.6
       MemorySize: 128
       Timeout: 300
-      Description: ELB log S3(events) to firehose
+      Description: CloudFront log S3 to firehose
       Environment:
         Variables:
-          firehose_stream_name: !Ref 'Step3deliverystream'
+          firehose_stream_name: !Ref 'Step4deliverystream'
       Tags:
         - Key: CloudformationArn
           Value: !Ref 'AWS::StackId'
 
-  Step2SqsDeadLetterQueue:
+  Step3SqsDeadLetterQueue:
     Type: AWS::SQS::Queue
     Properties:
       MessageRetentionPeriod: 1209600
 
-  Step3deliverystream:
-    DependsOn:
-      - Step3deliveryPolicy
+  Step4deliverystream:
     Type: AWS::KinesisFirehose::DeliveryStream
     Properties:
       ExtendedS3DestinationConfiguration:
-        BucketARN: !Sub 'arn:aws:s3:::${Step4S3bucket}'
+        BucketARN: !Sub 'arn:aws:s3:::${Step5S3Bucket}'
         BufferingHints:
           IntervalInSeconds: '300'
           SizeInMBs: '50'
         CompressionFormat: GZIP
-        Prefix: firehose/alb_logs/
-        RoleARN: !GetAtt 'Step3deliveryRole.Arn'
+        Prefix: firehose/cloudfront_logs/
+        RoleARN: !GetAtt 'Step4deliveryRole.Arn'
         ProcessingConfiguration:
           Enabled: 'false'
 
-  Step3deliveryRole:
+  Step4deliveryRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -274,7 +271,7 @@ Resources:
               StringEquals:
                 sts:ExternalId: !Ref 'AWS::AccountId'
 
-  Step3deliveryPolicy:
+  Step4deliveryPolicy:
     Type: AWS::IAM::Policy
     Properties:
       PolicyName: firehose_delivery_policy
@@ -290,18 +287,18 @@ Resources:
               - s3:ListBucketMultipartUploads
               - s3:PutObject
             Resource:
-              - !Sub 'arn:aws:s3:::${Step4S3bucket}'
-              - !Sub 'arn:aws:s3:::${Step4S3bucket}*'
+              - !Sub 'arn:aws:s3:::${Step5S3Bucket}'
+              - !Sub 'arn:aws:s3:::${Step5S3Bucket}*'
       Roles:
-        - !Ref 'Step3deliveryRole'
+        - !Ref 'Step4deliveryRole'
 
-  Step3LogGroupFirehose:
+  Step4LogGroupFirehose:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: !Sub '/aws/firehose/${Step3deliverystream}'
-      RetentionInDays: 7
+      LogGroupName: !Sub '/aws/firehose/${Step4deliverystream}'
+      RetentionInDays: !Ref 'CWlogsExpiredate'
 
-  Step4S3bucket:
+  Step5S3Bucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Delete
     Properties:
@@ -309,38 +306,6 @@ Resources:
         Rules:
           - Id: AutoDelete
             Status: Enabled
-            ExpirationInDays: '14'
-      NotificationConfiguration:
-        TopicConfigurations:
-          - Event: s3:ObjectCreated:*
-            Filter:
-              S3Key:
-                Rules:
-                  - Name: suffix
-                    Value: gz
-                  - Name: prefix
-                    Value: firehose/alb_logs
-            Topic: !Ref 'Step5SnsTopic'
-
-  Step5SnsTopicPolicy:
-    Type: AWS::SNS::TopicPolicy
-    Properties:
-      PolicyDocument:
-        Version: '2012-10-17'
-        Id: MyTopicPolicy
-        Statement:
-        - Sid: allow-publish-s3
-          Effect: Allow
-          Principal:
-            Service:
-            - s3.amazonaws.com
-          Action:
-          - sns:Publish
-          Resource: !Ref 'Step5SnsTopic'
-      Topics:
-      - !Ref 'Step5SnsTopic'
-
-  Step5SnsTopic:
-    Type: AWS::SNS::Topic
-    Properties:
-      DisplayName: s3-trigger-firehose-output
+            ExpirationInDays: !Ref 'S3Expiredate'
+      VersioningConfiguration:
+        Status: Enabled
