--- a/CFn/elblog-to-firehose/cfn-s3-lambda-firehose-s3.yaml
+++ b/CFn/elblog-to-firehose/cfn-s3-lambda-firehose-s3.yaml
@@ -1,14 +1,62 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: S3(alblog) Firehose S3(json) 20180513
-Parameters:
-  SourceS3Bucket:
-    Description: S3 Bucket Name (ALB accesslog)
-    Type: String
-    Default: c1-s3bucket-#####
-
+Description: S3(alblog) Firehose S3(json) 20180510
 Resources:
+  Step1S3Bucket:
+    Type: AWS::S3::Bucket
+    DeletionPolicy: Delete
+    Properties:
+      LifecycleConfiguration:
+        Rules:
+          - Id: AutoDelete
+            Status: Enabled
+            ExpirationInDays: '7'
+      NotificationConfiguration:
+        TopicConfigurations:
+          - Event: s3:ObjectCreated:*
+            Filter:
+              S3Key:
+                Rules:
+                  - Name: suffix
+                    Value: gz
+            Topic: !Ref 'Step2SnsTopic'
+      VersioningConfiguration:
+        Status: Enabled
 
-  Step1SnsTopicPolicy:
+  Step1S3BucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref 'Step1S3Bucket'
+      PolicyDocument:
+        Id: ElblogsBucketPolicy
+        Statement:
+          - Sid: AddPerm
+            Effect: Allow
+            Principal:
+              AWS:
+                - arn:aws:iam::582318560864:root
+                - arn:aws:iam::127311923021:root
+                - arn:aws:iam::033677994240:root
+                - arn:aws:iam::027434742980:root
+                - arn:aws:iam::797873946194:root
+                - arn:aws:iam::985666609251:root
+                - arn:aws:iam::054676820928:root
+                - arn:aws:iam::156460612806:root
+                - arn:aws:iam::652711504416:root
+                - arn:aws:iam::156460612806:root
+                - arn:aws:iam::009996457667:root
+                - arn:aws:iam::600734575887:root
+                - arn:aws:iam::383597477331:root
+                - arn:aws:iam::114774131450:root
+                - arn:aws:iam::797873946194:root
+                - arn:aws:iam::783225319266:root
+                - arn:aws:iam::718504428378:root
+                - arn:aws:iam::507241528517:root
+            Action:
+              - s3:PutObject
+            Resource:
+              - !Sub 'arn:aws:s3:::${Step1S3Bucket}/*'
+
+  Step2SnsTopicPolicy:
     Type: AWS::SNS::TopicPolicy
     Properties:
       PolicyDocument:
@@ -22,34 +70,35 @@ Resources:
                 - s3.amazonaws.com
             Action:
               - sns:Publish
-            Resource: !Ref 'Step1SnsTopic'
+            Resource: !Ref 'Step2SnsTopic'
       Topics:
-        - !Ref 'Step1SnsTopic'
+        - !Ref 'Step2SnsTopic'
 
-  Step1SnsTopic:
+  Step2SnsTopic:
     Type: AWS::SNS::Topic
     Properties:
-      DisplayName: s3-trigger-alb-output
+      DisplayName: s3-trigger-elb-output
       Subscription:
-        - Endpoint: !GetAtt 'Step2LambdaFunction.Arn'
+        - Endpoint: !GetAtt 'Step3LambdaFunction.Arn'
           Protocol: lambda
 
-  Step2LambdaLambdaPermission:
+  Step3LambdaLambdaPermission:
     Type: AWS::Lambda::Permission
     Properties:
-      FunctionName: !Ref 'Step2LambdaFunction'
+      FunctionName: !Ref 'Step3LambdaFunction'
       Action: lambda:InvokeFunction
       Principal: sns.amazonaws.com
-      SourceArn: !Ref 'Step1SnsTopic'
+      SourceArn: !Ref 'Step2SnsTopic'
 
-  Step2LogGroupLambda:
+  Step3LogGroupLambda:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: !Sub '/aws/lambda/${Step2LambdaFunction}'
+      LogGroupName: !Sub '/aws/lambda/${Step3LambdaFunction}'
       RetentionInDays: 14
 
-  Step2LambdaRole:
+  Step3LambdaRole:
     Type: AWS::IAM::Role
+    DependsOn: 'Step1S3Bucket'
     Properties:
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
@@ -79,23 +128,17 @@ Resources:
               - Effect: Allow
                 Action:
                   - s3:GetObject
-                Resource: !Sub 'arn:aws:s3:::${SourceS3Bucket}/*'
+                Resource: !Sub 'arn:aws:s3:::${Step1S3Bucket}/*'
               - Effect: Allow
                 Action:
                   - firehose:PutRecordBatch
                 Resource: !GetAtt 'Step3deliverystream.Arn'
-              - Effect: Allow
-                Action:
-                  - sqs:SendMessage
-                Resource: !GetAtt [Step2SqsDeadLetterQueue, Arn]
 
-  Step2LambdaFunction:
+  Step3LambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
       Handler: index.lambda_handler
-      Role: !GetAtt 'Step2LambdaRole.Arn'
-      DeadLetterConfig: 
-        TargetArn: !GetAtt [Step2SqsDeadLetterQueue, Arn]
+      Role: !GetAtt 'Step3LambdaRole.Arn'
       Code:
         ZipFile: !Sub |
           import boto3
@@ -111,17 +154,13 @@ Resources:
           firehose = boto3.client('firehose')
   
           def lambda_handler(event, context):
-            a = parse_s3_event(event)
-            bucket_name = a['bucket_name']
-            key = a['key']
+            z = parse_s3_event(event)
+            bucket_name = z['bucket_name']
+            key = z['key']
+            response =s3.get_object(Bucket=bucket_name, Key=key)
+            body = gzip.decompress(response['Body'].read()).decode('utf-8').splitlines()
+            process_log(body)
 
-            # Process ALB log (gzip)
-            if (re.match('.*.gz$', key)):
-              response =s3.get_object(Bucket=bucket_name, Key=key)
-              body = gzip.decompress(response['Body'].read()).decode('utf-8').splitlines()
-              if len(body) > 0:
-                process_log(body)
-        
           def parse_s3_event(event):
             a = json.loads(event['Records'][0]['Sns']['Message'])
             z = {}
@@ -149,74 +188,74 @@ Resources:
             a = line.split('"')
             b = a[0].split(' ')
 
-            # ALB Log
+            # Check ALB Log
             if len(b) == 13:
               if b[2].split('/')[0] == 'app':
-                if (re.match('[0-9]...-[0-9].-[0-9].T[0-9].:[0-9].:[0-9].\.[[0-9]*Z' , b[1])):
-                  z = parse_alb_log(a)
+                z["type"] = b[0]
+                z["timestamp"] = b[1]
+                z["elb"] = b[2]
+                
+                if len(b[3].split(':')) > 1:
+                  z["client_port"] = b[3].split(':')[1]
 
-            if len(z) > 10:
-              #print(z)
-              return json.dumps(z) + "\n"
+                if len(b[4].split(':')) > 1:
+                  z["target_port"] = b[4].split(':')[1]
 
-          def parse_alb_log(a):
-            z = {}
-            b = a[0].split(' ')
+                z["request_processing_time"] = float(b[5])
+                z["target_processing_time"] = float(b[6])
+                z["response_processing_time"] = float(b[7])
+                z["elb_status_code"] = b[8]
+                z["target_status_code"] = b[9]
+                z["received_bytes"] = float(b[10])
+                z["sent_bytes"] = float(b[11])
+                z["request"] = a[1]
+                z["user_agent"] = a[3]
 
-            # ALB Log
-            z["type"] = b[0]
-            z["timestamp"] = b[1]
-            z["elb"] = b[2]
-            if len(b[3].split(':')) > 1:
-              z["client_port"] = b[3].split(':')[1]
-            if len(b[4].split(':')) > 1:
-              z["target_port"] = b[4].split(':')[1]
-            z["request_processing_time"] = float(b[5])
-            z["target_processing_time"] = float(b[6])
-            z["response_processing_time"] = float(b[7])
-            z["elb_status_code"] = b[8]
-            z["target_status_code"] = b[9]
-            z["received_bytes"] = float(b[10])
-            z["sent_bytes"] = float(b[11])
-            z["request"] = a[1]
-            z["user_agent"] = a[3]
+                c = a[4].split(' ')
+                if len(c) == 5:
+                  z["ssl_cipher"] = c[1]
+                  z["ssl_protocol"] = c[2]
+                  z["target_group_arn"] = c[3]
 
-            c = a[4].split(' ')
-            if len(c) == 5:
-              z["ssl_cipher"] = c[1]
-              z["ssl_protocol"] = c[2]
-              z["target_group_arn"] = c[3]
-            z["trace_id"] = a[5]
-            z["domain_name"] = a[7]
-            z["chosen_cert_arn"] = a[9]
-            z["matched_rule_priority"] = a[10]
+                z["trace_id"] = a[5]
+                z["domain_name"] = a[7]
+                z["chosen_cert_arn"] = a[9]
+                z["matched_rule_priority"] = a[10]
 
-            if len(a) > 10:
-              d = a[10].split(' ')
-              if len(d) > 1:
-                z["matched_rule_priority"] = d[1]
-            z["client"] = b[3].split(':')[0]
-            z["target"] = b[4].split(':')[0]
-            if len(z["request"].split(' ')) > 2:
-              z["request_method"] = z["request"].split(' ')[0]
-              z["request_uri"] = z["request"].split(' ')[1]
-              z["request_http_version"] = z["request"].split(' ')[2]
-              if z["request_method"] != '-' :
-                e = urllib.parse.urlparse(z["request_uri"])
-                z["request_uri_scheme"] = e.scheme
-                z["request_uri_user"] = e.username
-                z["request_uri_host"] = e.hostname
-                z["request_uri_port"] = e.port
-                z["request_uri_path"] = e.path
-                z["request_uri_query"] = e.query
-                z["request_uri_fragment"] = e.fragment
-              else:
-                z["request_uri_scheme"] = z["request_uri"].split(':')[0]
-                z["request_uri_user"] = ''
-                z["request_uri_host"] = z["request_uri"].split('/')[2].split(':')[0]
-                z["request_uri_port"] = z["request_uri"].split(':')[2].split('-')[0]
-                z["request_uri_path"] = ''
-            return z
+                if len(a) > 10:
+                  d = a[10].split(' ')
+                  if len(d) > 1:
+                    z["matched_rule_priority"] = d[1]
+
+                # fluent-plugin-elb-access-log compatible
+                z["client"] = b[3].split(':')[0]
+                z["target"] = b[4].split(':')[0]
+
+                if len(z["request"].split(' ')) > 2:
+                  z["request_method"] = z["request"].split(' ')[0]
+                  z["request_uri"] = z["request"].split(' ')[1]
+                  z["request_http_version"] = z["request"].split(' ')[2]
+                  if z["request_method"] != '-' :
+                    e = urllib.parse.urlparse(z["request_uri"])
+                    z["request_uri_scheme"] = e.scheme
+                    z["request_uri_user"] = e.username
+                    z["request_uri_host"] = e.hostname
+                    z["request_uri_port"] = e.port
+                    z["request_uri_path"] = e.path
+                    z["request_uri_query"] = e.query
+                    z["request_uri_fragment"] = e.fragment
+                  else:
+                    z["request_uri_scheme"] = z["request_uri"].split(':')[0]
+                    z["request_uri_user"] = ''
+                    z["request_uri_host"] = z["request_uri"].split('/')[2].split(':')[0]
+                    z["request_uri_port"] = z["request_uri"].split(':')[2].split('-')[0]
+                    z["request_uri_path"] = ''
+
+            #Column check (number, timestamp format)
+            if len(z) > 30:
+              if (re.match('[0-9]...-[0-9].-[0-9].T[0-9].:[0-9].:[0-9].\.[[0-9]*Z' , z["timestamp"])):
+                #print(z)
+                return json.dumps(z) + "\n"
 
           def PutRecordBatchFirehose(data):
             firehose_stream_name = os.environ['firehose_stream_name']
@@ -230,18 +269,13 @@ Resources:
       Runtime: python3.6
       MemorySize: 128
       Timeout: 300
-      Description: ELB log S3(events) to firehose
+      Description: ALB log S3(events) to firehose
       Environment:
         Variables:
           firehose_stream_name: !Ref 'Step3deliverystream'
       Tags:
         - Key: CloudformationArn
           Value: !Ref 'AWS::StackId'
-
-  Step2SqsDeadLetterQueue:
-    Type: AWS::SQS::Queue
-    Properties:
-      MessageRetentionPeriod: 1209600
 
   Step3deliverystream:
     DependsOn:
@@ -309,7 +343,7 @@ Resources:
         Rules:
           - Id: AutoDelete
             Status: Enabled
-            ExpirationInDays: '14'
+            ExpirationInDays: '3'
       NotificationConfiguration:
         TopicConfigurations:
           - Event: s3:ObjectCreated:*
