--- a/CFn/accesslog-via-firehose/cfn-cloudfront-log.yaml
+++ b/CFn/accesslog-via-firehose/cfn-cloudfront-log.yaml
@@ -219,7 +219,7 @@ Resources:
             z["fle_status"] = b[3]
             z["fle_encrypted_fields"] = b[3]
 
-            z["timestamp"] = z["date"] + 'T' + z["time"] + '.000000Z'
+            z["timestamp"] = z["date"] + 'T' + z["time"] + 'Z'
 
             return z
 
@@ -498,7 +498,7 @@ Resources:
             z['day'] = a[2]
             z['month'] = a[3]
             z['year'] = a[4]
-            f = '/host=' + host + '/year=' + z['year'] + '/month=' + z['month'] + '/day=' + z['day'] + '/hour='+ z['hour'] + '/' + z['filename']
+            f = 'Step7/host=' + host + '/year=' + z['year'] + '/month=' + z['month'] + '/day=' + z['day'] + '/' + z['filename']
             return f
 
       Runtime: python3.6
@@ -522,6 +522,61 @@ Resources:
           - Id: AutoDelete
             Status: Enabled
             ExpirationInDays: !Ref 'S3AthenaExpiredate'
+
+  Step9GlueDatabase:
+    Type: AWS::Glue::Database
+    Properties:
+      # The database is created in the Data Catalog for your account
+      CatalogId: !Ref AWS::AccountId   
+      DatabaseInput:
+        # The name of the database is defined in the Parameters section above
+        Name: !Sub 'cloudfront'
+        Description: Glue Database for ETL processing by Athena
+        #LocationUri: !Sub 's3://${Step8S3Bucket}/Step9/Database/'
+        #Parameters: Leave AWS database parameters blank
+
+  CFNRoleFlights:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          -
+            Effect: "Allow"
+            Principal:
+              Service:
+                - "glue.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
+      Path: "/"
+      Policies:
+        -
+          PolicyName: "root"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              -
+                Effect: "Allow"
+                Action: "*"
+                Resource: "*"
+
+  CFNCrawlerFlights:
+    Type: AWS::Glue::Crawler
+    Properties:
+      Name: !Sub 'cloudfront_crawler'
+      Role: !GetAtt CFNRoleFlights.Arn
+      #Classifiers: none, use the default classifier
+      Description: AWS Glue crawler to crawl flights data
+      #Schedule: none, use default run-on-demand
+      DatabaseName: !Ref Step9GlueDatabase
+      Targets:
+        S3Targets:
+          # Public S3 bucket with the flights data
+          - Path: !Sub 's3://${Step8S3Bucket}/Step7/'
+      TablePrefix: 'cloudfront'
+      SchemaChangePolicy:
+        UpdateBehavior: "UPDATE_IN_DATABASE"
+        DeleteBehavior: "LOG"
 
 Outputs:
   S3BucketSource:
